src/test/deca/syntax/valid/test_parser_return.deca
// Description:
//    Minimalistic program to test return.
//
// Results:
//    None
//
// History:
//    Created on 6/1/2025
{
    return 3;
    return 1 || sg + None;
}
