src/test/deca/syntax/invalid/notYetImplemented/test_parser_class_declared_inside_class.deca
// Description:
//    Minimalistic program to test the creation of a class inside another one.
//
// Results:
//    None
//
// History:
//    Created on 13/1/2025

class Car{
    int x = 42;
    class Cat{
        protected int weight;
    }
}